--- a/rest-assured/pom.xml
+++ b/rest-assured/pom.xml
@@ -34,5 +34,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
